# cmake

./: README.md
Hello/: hello.cpp  main.cpp
cmake/: 06-tests.md
greeter/: CMakeLists.txt
greeter/test/: greeter.ut.cpp
intro/: index.html
module1/: 01_make.en.md  02_cmake.en.md  03_presentation_homework.en.md  index.en.html  index.html  index.pl.html
pizzas/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json
pizzas/src/: CMakeLists.txt  Pizza.cpp  main.cpp
pizzas/test/: PizzeriaTest.cpp
